Fix: Title is too big

--- a/src/components/portfolio card/PortfolioCard.css
+++ b/src/components/portfolio card/PortfolioCard.css
@@ -139,9 +139,9 @@
 }
 
 .portfolio-text h3 {
-  min-height: 30px;
-  font-size: 24px;
-  margin: 0 0 10px;
+  min-height: 10px;
+  font-size: 16px;
+  margin: 0 0 2px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
